# zkcreds-rs

./: Cargo.toml  pyproject.toml
benches/: bench.rs
benches/microbenches/: mod.rs  simple_expiry.rs
python-examples/: web-demo.py
