[build-system]
requires = ["maturin>=0.12,<0.13"]
build-backend = "maturin"

[project]
name = "zkcreds"
version = "0.1.0"
description = ""  # Add a project description
license = "MIT OR Apache-2.0"
readme = "README.md"  # Specify if you have a README file
requires-python = ">=3.8"
classifiers = [
	"Development Status :: 4 - Beta",
	"Intended Audience :: Developers",
	"Intended Audience :: Science/Research",
	"License :: OSI Approved :: Apache Software License",
	"License :: OSI Approved :: MIT License",
	"Programming Language :: Python :: 3 :: Only",
	"Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Rust",
	"Topic :: Security :: Cryptography",
	"Topic :: System :: Distributed Computing",
	"Topic :: Systems Administration :: Authentication/Directory"
]


